Fix copy past on Firefox

--- a/devel/codepress.css
+++ b/devel/codepress.css
@@ -1,7 +1,14 @@
-body {margin-top:5px;_margin-top:14px;font-family:monospace;font-size:13px;white-space:pre;line-height:16px;}
+body {margin-top:5px;_margin-top:14px;font-family:Monospace;
+/* white-space:pre; */
+font-size:13px;line-height:16px;}
 html>body{background-position:0 2px;}
-P {margin:0;padding:0;border:0;outline:0;display:block;white-space:pre;}
+P {margin:0;padding:0;border:0;outline:0;display:block;
+/* white-space:pre; */
+}
 b, i, s, u, a, em, tt, ins, big, cite, strong, var, dfn {text-decoration:none;font-weight:normal;font-style:normal;font-size:13px;}
+
+/*added*/
+pre {margin:0}
 
 body.hide-line-numbers {background:white;margin-left:16px;}
 body.show-line-numbers {background-image:url("images/line-numbers.png");margin-left:32px;}
